# MSU

./: .gitignore  3  CMakeLists.txt  Doxyfile  README.md  scratch.cpp  test.cpp
C++/cpp_homework/: CMakeLists.txt  DZ-1.cpp  DZ-2.cpp  DZ-234.cpp  DZ-5.cpp  DZ-6.cpp  DZ-7.cpp  homework_1.cpp  homework_2.cpp
C++/cpp_lessons/: lesson1.cpp  lesson2.cpp  lesson4.cpp
C++/cpp_prac/: CMakeLists.txt  M1.cpp  M10.cpp  M11.cpp  M12.cpp  M2.cpp  M3.cpp  M5.cpp  M6-7.cpp  M8.cpp  M9.cpp
C++/cpp_prac/OLD/: M1.cpp  M4.cpp
C/c_ejudge/: task  task3.c
C/c_homework/: homework_3.c  homework_6.c  shell.c
C/c_lessons/: OSLesson1.c  defines.c  func_ptrs.c  lesson2.c  semaphores.c
CHomework/: CMakeCache.txt  Doxyfile  Makefile  a.out  build.sh  cmake_install.cmake  colors.h  homework1  homework1.c  homework2  homework2.c  homework3.c  homework5.c  homework6.c  homework6_old.c  scratch.c  shell.c
CHomework/html/: colors_8h_source.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  homework1_8c.html  homework2_8c.html  homework3_8c.html  index.html
CLessons/: a.out  build.sh  lesson2  lesson2.c  lesson3.c  lesson4.c  lesson5.c
builder/: .CMakeLists.txt.swp  build.cpp  builder.cpp
c_ejudge/: task5.c
c_homework/: .homework6.c.swp  CMakeLists.txt  homework1.c  homework_3.c  homework_7.c  shell.c
c_lessons/: IPC_queue.c  defines.c  func_ptrs.c  semaphores.c
contest_2/: kr2_1.c  kr2_2.c  kr2_3.c  task1.c  task2.c  task3.c
ejudge/: task2.c  task3.c  task4  task4.c  task4_only_function.h  task5.c
(+145 files in other folders)
